Wijzigingen in Datamine bestand om resultaten van enquête te verwerken

--- a/Week 11/Datamine.ipynb
+++ b/Week 11/Datamine.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,16 +412,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\arcde\\AppData\\Local\\Temp\\ipykernel_9628\\933722837.py:34: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "C:\\Users\\Anthony Delgado\\AppData\\Local\\Temp\\ipykernel_44432\\933722837.py:34: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  product[\"INTRODUCTION_DATE\"] = pd.to_datetime(product[\"INTRODUCTION_DATE\"])\n",
-      "C:\\Users\\arcde\\AppData\\Local\\Temp\\ipykernel_9628\\933722837.py:54: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "C:\\Users\\Anthony Delgado\\AppData\\Local\\Temp\\ipykernel_44432\\933722837.py:54: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  sales_staff[\"DATE_HIRED\"] = pd.to_datetime(sales_staff[\"DATE_HIRED\"])\n"
      ]
     },
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1198,6 +1198,203 @@
     "# df2020.to_csv(\"2020_Turnover.csv\")\n",
     "# df2021.to_csv(\"2021_Turnover.csv\")\n",
     "# df2022.to_csv(\"2022_Turnover.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Bekend_met_Great_Outdoors', 'Leeftijd', 'Frequentie_Streetwear',\n",
+      "       'Aankoopmethode', 'Criteria_Streetwear', 'Uitgaven_Streetwear',\n",
+      "       'Type_Kledingstuk', 'Bron_Trends', 'Waarschijnlijkheid_Gebruik',\n",
+      "       'Suggesties_Verbetering', 'Recente_Aankoop', 'Type_Gekocht_Product'],\n",
+      "      dtype='object')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Type_Gekocht_Product</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Campinguitrusting;Visspullen;Geen aankoop gedaan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Casual kleding;Schoeisel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Buitenkleding</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Accessoires</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Casual kleding</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Geen aankoop gedaan;Accessoires</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Visspullen;Accessoires</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Casual kleding;Accessoires</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Geen aankoop gedaan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Schoeisel;Casual kleding</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Casual kleding;Buitenkleding</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Accessoires;Casual kleding</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Casual kleding;Accessoires</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Geen aankoop gedaan;Schoeisel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Buitenkleding;Casual kleding</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Casual kleding;Accessoires</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Schoeisel;Casual kleding</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Casual kleding;Buitenkleding</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Schoeisel;Casual kleding</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Schoeisel;Visspullen;Casual kleding</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Casual kleding;Accessoires</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Accessoires;Visspullen;Casual kleding</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Accessoires;Buitenkleding</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Casual kleding;Visspullen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Schoeisel;Casual kleding</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                Type_Gekocht_Product\n",
+       "0   Campinguitrusting;Visspullen;Geen aankoop gedaan\n",
+       "1                           Casual kleding;Schoeisel\n",
+       "2                                      Buitenkleding\n",
+       "3                                        Accessoires\n",
+       "4                                     Casual kleding\n",
+       "5                    Geen aankoop gedaan;Accessoires\n",
+       "6                             Visspullen;Accessoires\n",
+       "7                         Casual kleding;Accessoires\n",
+       "8                                Geen aankoop gedaan\n",
+       "9                           Schoeisel;Casual kleding\n",
+       "10                      Casual kleding;Buitenkleding\n",
+       "11                        Accessoires;Casual kleding\n",
+       "12                        Casual kleding;Accessoires\n",
+       "13                     Geen aankoop gedaan;Schoeisel\n",
+       "14                      Buitenkleding;Casual kleding\n",
+       "15                        Casual kleding;Accessoires\n",
+       "16                          Schoeisel;Casual kleding\n",
+       "17                      Casual kleding;Buitenkleding\n",
+       "18                          Schoeisel;Casual kleding\n",
+       "19               Schoeisel;Visspullen;Casual kleding\n",
+       "20                        Casual kleding;Accessoires\n",
+       "21             Accessoires;Visspullen;Casual kleding\n",
+       "22                         Accessoires;Buitenkleding\n",
+       "23                         Casual kleding;Visspullen\n",
+       "24                          Schoeisel;Casual kleding"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"Enquete.csv\")\n",
+    "df = df.convert_dtypes()\n",
+    "\n",
+    "print(df.columns)\n",
+    "# print(df.dtypes)\n",
+    "\n",
+    "kolom = \"Type_Gekocht_Product\"\n",
+    "\n",
+    "df1 = df.loc[:,[kolom]]\n",
+    "\n",
+    "df1[kolom] = df1[kolom].apply(lambda x : x.replace(\", \",\";\"))\n",
+    "\n",
+    "df1.to_csv(\"Enquete resultaat\", index=False)\n",
+    "\n",
+    "\n",
+    "display(df1)"
    ]
   }
  ],
